--- a/python_dla_kazdego/python_dla_humanistow.ipynb
+++ b/python_dla_kazdego/python_dla_humanistow.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMAuzXgqbVEQNXCHlCUcX1O",
+      "authorship_tag": "ABX9TyMDbXLxvc5OhJCoKbrCACDQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13071,6 +13071,36 @@
     {
       "cell_type": "code",
       "source": [
+        "pwd"
+      ],
+      "metadata": {
+        "id": "E37w-m4-t2yi",
+        "outputId": "2d29c6dd-bb21-4e91-fcf7-dd61387c7e61",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/content'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "df = pd.read_csv('parks.csv', usecols=[1,2,3])\n",
         "df.head()"
       ],
@@ -15384,11 +15414,11 @@
         "df['grade'].apply(one_up)"
       ],
       "metadata": {
-        "id": "pcoxuoJAh7yl",
-        "outputId": "10821600-7293-4a8f-d419-77e46f33d1f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pcoxuoJAh7yl",
+        "outputId": "10821600-7293-4a8f-d419-77e46f33d1f4"
       },
       "execution_count": 13,
       "outputs": [
@@ -15418,12 +15448,12 @@
         "df"
       ],
       "metadata": {
-        "id": "qkpd_q6ViZfI",
-        "outputId": "b9cb4a5c-2986-46a2-d685-e0242c948d1e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
-        }
+        },
+        "id": "qkpd_q6ViZfI",
+        "outputId": "b9cb4a5c-2986-46a2-d685-e0242c948d1e"
       },
       "execution_count": 14,
       "outputs": [
@@ -15615,12 +15645,12 @@
         "df                    "
       ],
       "metadata": {
-        "id": "aCxoHZ_HjN-4",
-        "outputId": "abccf79f-9240-40a7-983e-e2b1fde3a45f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
-        }
+        },
+        "id": "aCxoHZ_HjN-4",
+        "outputId": "abccf79f-9240-40a7-983e-e2b1fde3a45f"
       },
       "execution_count": 17,
       "outputs": [
@@ -15815,11 +15845,11 @@
         "df[['grade','test']].min()"
       ],
       "metadata": {
-        "id": "UnHJ8DYPkFfw",
-        "outputId": "d74cc58c-d605-4eeb-8b0d-cf4fb07b47a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UnHJ8DYPkFfw",
+        "outputId": "d74cc58c-d605-4eeb-8b0d-cf4fb07b47a2"
       },
       "execution_count": 20,
       "outputs": [
@@ -15843,11 +15873,11 @@
         "df['grade'].idxmin()"
       ],
       "metadata": {
-        "id": "YaQ43nqPkb86",
-        "outputId": "67711350-323f-43f4-a04e-9c9d12da4bf9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YaQ43nqPkb86",
+        "outputId": "67711350-323f-43f4-a04e-9c9d12da4bf9"
       },
       "execution_count": 22,
       "outputs": [
@@ -15870,12 +15900,12 @@
         "df"
       ],
       "metadata": {
-        "id": "MnZ_LtJnk1ES",
-        "outputId": "78d7b58b-7198-41f4-fb61-49f7006fa787",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
-        }
+        },
+        "id": "MnZ_LtJnk1ES",
+        "outputId": "78d7b58b-7198-41f4-fb61-49f7006fa787"
       },
       "execution_count": 23,
       "outputs": [
@@ -16070,12 +16100,12 @@
         "df.sort_values('kolokwium', ascending=False)"
       ],
       "metadata": {
-        "id": "g52OWuNnlH8g",
-        "outputId": "709f2a43-d43a-4bf6-c450-106849178921",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
-        }
+        },
+        "id": "g52OWuNnlH8g",
+        "outputId": "709f2a43-d43a-4bf6-c450-106849178921"
       },
       "execution_count": 25,
       "outputs": [
@@ -16270,12 +16300,12 @@
         "pd.get_dummies(df['kolokwium'])"
       ],
       "metadata": {
-        "id": "oJjMz8ABmE6m",
-        "outputId": "0897c65b-9f6d-4341-e957-981155d609fc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
-        }
+        },
+        "id": "oJjMz8ABmE6m",
+        "outputId": "0897c65b-9f6d-4341-e957-981155d609fc"
       },
       "execution_count": 27,
       "outputs": [
@@ -16445,6 +16475,236 @@
           },
           "metadata": {},
           "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Czytanie plików i zapisywanie do plików\n",
+        "\n",
+        "https://pandas.pydata.org/pandas-docs/stable/user_guide/io.html"
+      ],
+      "metadata": {
+        "id": "B2anFCHErnbf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.to_csv('students.csv')\n",
+        "df = pd.read_csv('students.csv')\n",
+        "df"
+      ],
+      "metadata": {
+        "id": "l58Lalu4rsJX",
+        "outputId": "9048e200-b462-457f-f323-b6850eaeda9d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 269
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "   Unnamed: 0   student  ocena kolokwium  nowa ocena  \\\n",
+              "0           0   Adamski      2      kol1           3   \n",
+              "1           1   Adamski      3      kol2           4   \n",
+              "2           2   Adamski      3      kol2           4   \n",
+              "3           3  Bachleda      5      kol1           5   \n",
+              "4           4  Bachleda      5      kol3           5   \n",
+              "5           5     Curuś      3      kol2           4   \n",
+              "6           6     Curuś      5      kol3           5   \n",
+              "\n",
+              "                  treść kolokwium  \n",
+              "0  Przepływ sterowania w Pythonie  \n",
+              "1         Programowanie obiektowe  \n",
+              "2         Programowanie obiektowe  \n",
+              "3  Przepływ sterowania w Pythonie  \n",
+              "4                  Numpy i Pandas  \n",
+              "5         Programowanie obiektowe  \n",
+              "6                  Numpy i Pandas  "
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-b69ff187-653e-4877-b625-1f375ac433b2\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Unnamed: 0</th>\n",
+              "      <th>student</th>\n",
+              "      <th>ocena</th>\n",
+              "      <th>kolokwium</th>\n",
+              "      <th>nowa ocena</th>\n",
+              "      <th>treść kolokwium</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "      <td>Adamski</td>\n",
+              "      <td>2</td>\n",
+              "      <td>kol1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Przepływ sterowania w Pythonie</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>Adamski</td>\n",
+              "      <td>3</td>\n",
+              "      <td>kol2</td>\n",
+              "      <td>4</td>\n",
+              "      <td>Programowanie obiektowe</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2</td>\n",
+              "      <td>Adamski</td>\n",
+              "      <td>3</td>\n",
+              "      <td>kol2</td>\n",
+              "      <td>4</td>\n",
+              "      <td>Programowanie obiektowe</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>3</td>\n",
+              "      <td>Bachleda</td>\n",
+              "      <td>5</td>\n",
+              "      <td>kol1</td>\n",
+              "      <td>5</td>\n",
+              "      <td>Przepływ sterowania w Pythonie</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>4</td>\n",
+              "      <td>Bachleda</td>\n",
+              "      <td>5</td>\n",
+              "      <td>kol3</td>\n",
+              "      <td>5</td>\n",
+              "      <td>Numpy i Pandas</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>5</td>\n",
+              "      <td>Curuś</td>\n",
+              "      <td>3</td>\n",
+              "      <td>kol2</td>\n",
+              "      <td>4</td>\n",
+              "      <td>Programowanie obiektowe</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>6</td>\n",
+              "      <td>Curuś</td>\n",
+              "      <td>5</td>\n",
+              "      <td>kol3</td>\n",
+              "      <td>5</td>\n",
+              "      <td>Numpy i Pandas</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b69ff187-653e-4877-b625-1f375ac433b2')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-b69ff187-653e-4877-b625-1f375ac433b2 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-b69ff187-653e-4877-b625-1f375ac433b2');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
         }
       ]
     }
