--- a/python_dla_kazdego/python_podstawy.ipynb
+++ b/python_dla_kazdego/python_podstawy.ipynb
@@ -34,8 +34,6 @@
         "id": "sticky-sleeping"
       },
       "source": [
-        "<div style=\"text-align:justify\">\n",
-        "\n",
         "Od dziesięciu lat mamy do czyniena z nową rewolucją technologiczną - rewolucją w dziedzinie sztucznej inteligencji. [Andrew Ng](https://en.wikipedia.org/wiki/Andrew_Ng) porównuje obecny wpływ sztucznej inteligencji na nasze życie ze zmianami społecznymi jakie dokonały się w świecie w XX w. dzięki elektryczności. Niektórych czytelników może to porównanie zdziwić, wszak nie często, o ile w ogóle, spotykamy w codziennym życiu roboty i inne inteligentne artefakty rodem z filmów science-fiction. Śpieszymy więc wyjaśnić, że sztuczna inteligencja, o której tu mowa to głównie *programy komputerowe*, czyli sposoby rozwiązywania problemów zapisane w języku zrozumiałym dla komputera. Oczywiście nie wszystkie programy komputerowe można nazywać inteligentnymi, lecz tylko te, które mają na celu \n",
         "\n",
         "> automatyzację procesów myślowych standardowo wykonywanych przez ludzi \n",
@@ -44,9 +42,7 @@
         "\n",
         "W czasie, gdy piszemy tę książkę, język programowania Python jest niekwestionowanym numerem 1 na liście języków programowania używanych do tworzenia inteligentnych programów komputerowych. Stąd właśnie ta książka, która jest pierwszą z serii książek, które ukażą się pod nazwą **AI dla każdego**.\n",
         "\n",
-        "Nazwa serii **AI dla każdego** to nie tani chwyt marketingowy. To wyraz naszego dogłębnego przekonania, że dziś KAŻDY, przy odrobinie wysiłku i dobrych chęci, może być aktywnym uczestnikiem rewolucji, o której wspomnieliśmy na początku. Ale pamiętaj, aby tworzyć sztuczną inteligencję musisz programować. Nie ma innej drogi komunikacji człowieka z maszyną (o tym napiszemy więcej w następnym rozdziale).\n",
-        "    \n",
-        "</div>"
+        "Nazwa serii **AI dla każdego** to nie tani chwyt marketingowy. To wyraz naszego dogłębnego przekonania, że dziś KAŻDY, przy odrobinie wysiłku i dobrych chęci, może być aktywnym uczestnikiem rewolucji, o której wspomnieliśmy na początku. Ale pamiętaj, aby tworzyć sztuczną inteligencję musisz programować. Nie ma innej drogi komunikacji człowieka z maszyną (o tym napiszemy więcej w następnym rozdziale)."
       ]
     },
     {
@@ -55,7 +51,7 @@
         "id": "7sy03UZ_ZeU_"
       },
       "source": [
-        "<div style=\"text-align:justify\">\n",
+        "\n",
         "\n",
         "Jeśli teraz zastanawiasz się czy podołasz nauce programowania, to mamy dla Ciebie kilka wskazówek i rad, które być może uznasz za pomocne. \n",
         "\n",
@@ -64,8 +60,7 @@
         "Po drugie celem tej książki nie jest nauczenie Cię Pythona na tyle, abyś mogła/mógł zajęć się programowaniem zawodowo. Materiał zawarty w tej książce to jedynie pierwszy krok, który ma Cię przygotować do dalszych, samodzielnych eksploracji. Mam nadzieję, że następnie sięgniesz po inne pozycje z serii **AI dla każdego** lub będziesz kontynuować naukę Python korzystając z innych źródeł. Potraktuj Pythona podobnie jak traktujesz język angielski (dziś chyba nikt rozsądny nie zapyta „Po co mi angielski?”) - warto go znać, nie wiadomo kiedy się przyda. Poza tym pamiętaj, że twórca Pythona, holenderski programista Guido van Rossum, tworzył go od samego początku jako język  programowania czytelny co do składni i generalnie prosty. I takim rzeczywiście jest, o czym się niebawem przekonasz.\n",
         "\n",
         "I w końcu po trzecie, pamiętaj to co wcześniej napisaliśmy: Python to numer 1 na liście języków programowania używanych w obszarze sztucznej inteligencji. To narzędzie, którego opanowanie pozwoli Ci uczestniczyć czynnie w rewolucji AI!\n",
-        "    \n",
-        "</div>"
+        "    \n"
       ]
     },
     {
@@ -83,7 +78,7 @@
         "id": "186c7ff5"
       },
       "source": [
-        "<div style=\"text-align:justify\">\n",
+        "\n",
         "\n",
         "Programowanie to jeden ze sposobów komunikacji człowieka z komputerem, którego celem jest rozwiązanie jakiegoś problemu. Programista lub programistka, to człowiek, który potrafi taką komunikację skutecznie prowadzić. W 1936 roku Alan Turing stworzył matematyczny model (nazwany Maszyną Turinga), który pozwala nam ocenić jakie problemy komputer może rozwiązać i jak dany problem jest złożony z punktu widzenia komputera. Od razu uspokajamy, zaczynając programować nie musisz nic wiedzieć o Maszynie Turinga.\n",
         "\n",
@@ -100,8 +95,7 @@
         "> Program komputerowy to zbiór instrukcji mówiących komputerowi co ma robić krok po kroku.\n",
         "\n",
         "Naukę programowania zaczniemy właśnie od nauczenia się tych prostych instrukcji i sukcesywnie będziemy uczyć się składania ich w programy komputerowe. \n",
-        "\n",
-        "</div>"
+        "\n"
       ]
     },
     {
@@ -119,7 +113,7 @@
         "id": "3d8c7ae6"
       },
       "source": [
-        "<div style=\"text-align:justify\">\n",
+        "\n",
         "\n",
         "Zazwyczaj autorzy książek o programowaniu jeden z pierwszych rozdziałów poświęcają instalacji i konfiguracji niezbędnego środowiska, w którym można programować, tj. prowadzić skuteczną komunikację z komputerem. Zakładam, że wśród czytelników tej książki mogą być osoby podchodzące do instalowania czegokolwiek sceptycznie i raczej niechętnie. I tu mam dobrą wiadomość. Nie musisz niczego instalować!\n",
         "\n",
@@ -137,8 +131,7 @@
         "\n",
         "    \n",
         "Następnie uruchom kod klikając na kółko z wpisanym weń trókątem, przeanalizuj wynik i zrozum dlaczego jest tak a nie inaczej. \n",
-        "    \n",
-        "</div>"
+        "    \n"
       ]
     },
     {
@@ -597,7 +590,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ql9qNmFCCqPE"
+        "id": "Od_jW4q-C5qv"
       },
       "source": [
         "Przeanalizuj również poniższy kod."
@@ -608,7 +601,7 @@
       "execution_count": null,
       "metadata": {
         "id": "mNMPaxtfNhDD",
-        "outputId": "4a855476-c48b-4803-b8b8-4177c28ff6b3"
+        "outputId": "c588d3c2-6f38-428b-9239-4127eca6451c"
       },
       "outputs": [
         {
@@ -639,8 +632,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "SQzEPGL-CqPE",
-        "outputId": "f1a60d74-5e52-420c-c991-f88a6592f20b"
+        "id": "h1ayQ7IhC5qw",
+        "outputId": "511f3349-7ed9-40ff-fad9-31705158c0c9"
       },
       "outputs": [
         {
@@ -660,8 +653,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "0Bda4DfxCqPE",
-        "outputId": "d90d0bb2-67c9-4d7b-d5ce-023d0a093a8a"
+        "id": "sEv8f3GCC5qw",
+        "outputId": "2530d944-053a-4e01-8d5f-fc65cf63eead"
       },
       "outputs": [
         {
@@ -684,7 +677,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "swrmEGq4CqPE"
+        "id": "7S7IJAjRC5qx"
       },
       "source": [
         "## Formatowanie napisów"
@@ -2010,7 +2003,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "sWuIPZDoCqPL"
+        "id": "Vl6BjIzaC5rF"
       },
       "source": [
         "Poniższy kod wykorzystuje wcześniej poznaną metodę `count()` oraz instrukcję warunkową do wykrywania wulgaryzmów w tekście."
@@ -2021,7 +2014,7 @@
       "execution_count": null,
       "metadata": {
         "id": "lryXGVrMR5dK",
-        "outputId": "cf2b705e-9e9f-46d9-b66d-e7d812dfee64"
+        "outputId": "e52a0d1f-3937-4844-d2c5-d61a1cfc1ca1"
       },
       "outputs": [
         {
@@ -2042,7 +2035,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "C7u1FPawCqPL"
+        "id": "GtmuN5nXC5rF"
       },
       "source": [
         "Instrukcja warunkowa może być nieco bardzie złożona i przybrać postać instrukcji `if-else`:\n",
@@ -2298,7 +2291,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "K8ALVcLOCqPM"
+        "id": "wvTXle59C5rG"
       },
       "source": [
         "Poniżej znajduje się program wystawiający ocenę w zależności od liczby zdobytych punktów."
@@ -2493,7 +2486,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "UoaOc0_lCqPN"
+        "id": "_71cZVaHC5rG"
       },
       "source": [
         "Poniższy kod rysuje uszy kota o dowolnym rozmiarze `size`:"
@@ -2568,7 +2561,7 @@
       "execution_count": null,
       "metadata": {
         "id": "Tvg2-n0j-ZE8",
-        "outputId": "8902f4ec-fc6b-490b-c0e9-67f13432860a"
+        "outputId": "1097f180-124e-49c9-a5ae-477471abe94a"
       },
       "outputs": [
         {
@@ -2606,7 +2599,7 @@
       "execution_count": null,
       "metadata": {
         "id": "TZUIUzSa-jsH",
-        "outputId": "882ce1f5-203f-4bc8-e2f2-c10853ef0b8a"
+        "outputId": "ea03e841-851f-44b8-b71b-ff0fd65ab82f"
       },
       "outputs": [
         {
@@ -2782,7 +2775,7 @@
       "execution_count": null,
       "metadata": {
         "id": "evh-aGgVZoRE",
-        "outputId": "33c8ec71-7868-440b-ac10-39cf4db2b98b"
+        "outputId": "b3700958-e7ae-4897-bb43-f9e2af4553c4"
       },
       "outputs": [
         {
@@ -2814,7 +2807,7 @@
       "execution_count": null,
       "metadata": {
         "id": "UhPNVIhMZ5OM",
-        "outputId": "baf760d8-d0e9-47f2-9939-e585e8bae1ff"
+        "outputId": "17378612-8f45-4c93-9a4f-a1a7bec528f1"
       },
       "outputs": [
         {
@@ -2941,7 +2934,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5mSWWmrMCqPO"
+        "id": "aGnSiEnEC5rI"
       },
       "source": [
         "Jak narysować górę dolarów?"
@@ -2952,7 +2945,7 @@
       "execution_count": null,
       "metadata": {
         "id": "BGiQGTJmxp8Y",
-        "outputId": "6e1cb1a5-a94c-4787-df4f-94c34e9b1b33"
+        "outputId": "ab47a330-3424-47f3-dead-a1b4e5ee654d"
       },
       "outputs": [
         {
@@ -4125,7 +4118,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "PaAFZRYVCqPS"
+        "id": "cHGD9G62C5rM"
       },
       "source": [
         "A gdybyśmy życzyli sobie wymieszać kolory tęczy tak, aby ich kolejność była losowa, użyjemy metody `random.shuffle()`:"
@@ -4136,7 +4129,7 @@
       "execution_count": null,
       "metadata": {
         "id": "KYcTXL2xTfpi",
-        "outputId": "5f7ce5d1-f1fd-4fcb-975b-077a1b50050d"
+        "outputId": "1a9af316-35c8-46be-f4af-fd57bf119e8d"
       },
       "outputs": [
         {
@@ -4443,7 +4436,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "J4W9Cw_pCqPU"
+        "id": "59UJ9mcBC5rN"
       },
       "source": [
         "Poniższy kod dzieli tekst na słowa i prezentuje dwie listy słów: przed i po oczyszczeniu:"
@@ -4454,7 +4447,7 @@
       "execution_count": null,
       "metadata": {
         "id": "0SNSxYEQ7SM6",
-        "outputId": "0e829d32-d4b1-4b09-e40a-28b9299573ef"
+        "outputId": "94365170-6f37-4200-8f82-db67f5af8194"
       },
       "outputs": [
         {
@@ -4662,7 +4655,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "i-vaL9oVCqPU"
+        "id": "7jwlyGpmC5rO"
       },
       "source": [
         "Widot ten jest iterowalny, tzn. możemy po nim iterować:"
@@ -4672,8 +4665,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "U4itplJOCqPU",
-        "outputId": "37f0e35f-38ff-4af9-cb76-dcb10a125eb6"
+        "id": "k3TAyY3nC5rO",
+        "outputId": "0fc6132b-463f-40bd-e2b7-2c2a3854cbd7"
       },
       "outputs": [
         {
@@ -4844,7 +4837,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "U8MrkhSBCqPV"
+        "id": "iD8lII49C5rO"
       },
       "source": [
         "Poniżej znajduje się przykład słownika, którego kluczami są napisy:"
@@ -5034,7 +5027,7 @@
       "execution_count": null,
       "metadata": {
         "id": "2uc2lbW_56G6",
-        "outputId": "611ad21b-6c5e-442d-a6c9-bd42a392bc1f"
+        "outputId": "98c1fb95-772b-4cee-9d19-7ffa3ee3e980"
       },
       "outputs": [
         {
@@ -5247,7 +5240,7 @@
       "execution_count": null,
       "metadata": {
         "id": "Z4-_9zZEnykp",
-        "outputId": "191cfce7-01fe-498e-8ad3-216f927ac499"
+        "outputId": "6b584340-a5ce-4887-ad0d-93b27bb69409"
       },
       "outputs": [
         {
@@ -5875,7 +5868,7 @@
       "execution_count": null,
       "metadata": {
         "id": "3Ejr2Np9jQvf",
-        "outputId": "cc26024c-3a85-40b0-825e-c6405cc02bc8"
+        "outputId": "69899b2f-fe7e-4ef9-b497-d5fbb067d786"
       },
       "outputs": [
         {
@@ -5969,7 +5962,7 @@
       "execution_count": null,
       "metadata": {
         "id": "JmDRj4JEjwwg",
-        "outputId": "b5346cec-e8f3-4b92-fe19-f85d88591d15"
+        "outputId": "880f61f7-55dc-441d-c313-624c3876fbfe"
       },
       "outputs": [
         {
@@ -6381,7 +6374,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Yf28g07LCqPa"
+        "id": "uhnpYT2NC5rT"
       },
       "source": [
         "Możemy przekształcić słownik Pythona w strukturę formatu JSON za pomocą metody `json.dump()` i zapisać ją do pliku:"
@@ -6391,7 +6384,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "KkIcfzuYCqPa"
+        "id": "myhv23y0C5rT"
       },
       "outputs": [],
       "source": [
@@ -6409,7 +6402,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "u5_zS0ZcCqPa"
+        "id": "5EQ8NZeqC5rT"
       },
       "source": [
         "Poniżej pokazujemy przykład użycia metody `json.load()` do wczytania danych w formacie JSON. Zauważcie, że wynikiem jest słownik."
@@ -6419,8 +6412,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "HzxYMN0kCqPa",
-        "outputId": "4bc8b965-f729-4b40-9527-a75ddf4f3125"
+        "id": "pWq9uK6fC5rT",
+        "outputId": "1eb31d4a-723d-4f71-d044-dba4974a8859"
       },
       "outputs": [
         {
@@ -6547,7 +6540,7 @@
       "execution_count": null,
       "metadata": {
         "id": "8cdXZ0LGuSAL",
-        "outputId": "2d371b63-23b1-4065-bff6-c8a7785491fb"
+        "outputId": "d812fa9c-f129-4dab-f5e9-2899f6fed903"
       },
       "outputs": [
         {
@@ -7826,7 +7819,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "cbCXXOOwCqPe"
+        "id": "CZqQdRmZC5rX"
       },
       "source": [
         "Dodamy do `StudentExternal` jeden nowy parametr `study_field`."
@@ -7910,7 +7903,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "mmFIByaDCqPe"
+        "id": "0BQgYvjPC5rX"
       },
       "source": [
         "Przeanalizuj poniższy kod. Klasa trójkątów równobocznych `EquilateralTriangle` dziedziczy po klasie `Triangle`."
@@ -7920,8 +7913,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "QJKOHXJ5CqPe",
-        "outputId": "1b26a1e6-e64e-40da-afd4-ec8bf9a8f0fa"
+        "id": "hL03nZTUC5rX",
+        "outputId": "8a99a1e5-5b5e-45e1-b16f-4515af6d8238"
       },
       "outputs": [
         {
@@ -8212,7 +8205,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "0Vur7cUMCqPf"
+        "id": "1pwD32LwC5rY"
       },
       "source": [
         "### Generator\n",
@@ -8229,7 +8222,7 @@
       "execution_count": null,
       "metadata": {
         "id": "B51dNKdJOEol",
-        "outputId": "fdc36b38-09ea-445b-9041-bfb66691fb45"
+        "outputId": "2f240a87-ae00-43e3-e73e-d65a6f916ece"
       },
       "outputs": [
         {
@@ -8255,8 +8248,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "sfQGEsEHCqPf",
-        "outputId": "c443d729-7840-4227-8ae2-224a146c2e33"
+        "id": "y5nbPpeuC5rY",
+        "outputId": "a02412bd-ddcf-4478-8407-b753f5e02d06"
       },
       "outputs": [
         {
@@ -8292,7 +8285,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "4NLbdMb2CqPf"
+        "id": "u2iv_OqdC5rY"
       },
       "source": [
         "Generatory są bardzo pożyteczne, gdy chcemy uniknąć zaśmiecania pamięci komputera na przykład listami elementów,  szczególnie, gdy te listy są bardzo duże. Poniższy kod pokazuje różnicę między listą `my_list`, która tworzy są w całości i zajmuje miejsce w pamięci i generatorem `my_generator`, który nie generuje od razu calej listy liczb od 0 do 4.\n",
@@ -8305,8 +8298,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "nyLNCXeLCqPf",
-        "outputId": "43bbe3e4-1287-4f1d-b699-7680ec1048cd"
+        "id": "cB-zTHdZC5rY",
+        "outputId": "5e6e4a3a-0a8f-444c-b2fc-1975b38b504b"
       },
       "outputs": [
         {
