uporządkowanie wstępu do NumPy

--- a/data_science_dla_kazdego/numpy.ipynb
+++ b/data_science_dla_kazdego/numpy.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/trypuz/ksiazka_si/blob/main/data_science/numpy.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/trypuz/ai_dla_kazdego/blob/main/data_science_dla_kazdego/numpy.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -16,17 +16,15 @@
         "id": "7UtC6hO1KFsw"
       },
       "source": [
-        "# NUMPY"
+        "# NumPy czyli numeryczny Python"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "`NumPy` to skrót od angielskiego wyrażenia *numerical Python*. Biblioteka NumPy jest bardzo pożyteczna wszędzie tam, gdzie będziemy mieli do czynienia z danymi numerycznymi (choć tablice NumPy mogą przechowywać również dane nienumeryczne). \n",
+        "NumPy to skrót od angielskiego wyrażenia *numerical Python*. Biblioteka NumPy jest niezbędna wszędzie tam, gdzie musimy przetwarzać dużą ilość danych numerycznych. \n",
         "\n",
-        "Z zasady Python to język interpretowany, w związku z czym narzut czasowy potrzebny na przeprowadzenie dużej ilości obliczeń może być znaczny. NumPy to biblioteka stworzona z myślą o rozwiązaniu tego problemu. Udostępnia ona interfejs programistyczny (ang. *API*) w Pythonie, ale najbardziej krytyczne pod względem szybkości działania fragmenty kodu NumPy zostały zaimplementowane w kompilowanym języku C. Dzięki takiemu rozwiązaniu mamy dostęp do wysokopoziomowego API bez straty wydajnościowej.\n",
-        "\n",
-        "W rozdziale wprowadzającym struktury danych pisaliśmy o listach oraz o tym, że można z list tworzyć dość skomplikowane wielowymiarowe struktury danych. \n",
+        "Z zasady Python to język interpretowany, w związku z czym narzut czasowy potrzebny na przeprowadzenie dużej ilości obliczeń może być znaczny. NumPy to biblioteka stworzona z myślą o rozwiązaniu tego problemu. Udostępnia ona interfejs programistyczny (ang. *API*) w Pythonie, ale najbardziej krytyczne pod względem szybkości działania fragmenty kodu NumPy zostały zaimplementowane w kompilowanym języku C. Dzięki takiemu rozwiązaniu mamy dostęp do wysokopoziomowego i przyjaznego API bez straty wydajnościowej.\n",
         "\n",
         "W Pythonie podstawowym sposobem na przechowywanie kilku wartości w jednym obiekcie jest użycie listy. Lista może zawierać dowolną liczbę obiektów, a typy poszczególnych obiektów w ramach jednej listy mogą być różne. Definicja listy w Pythonie wygląda w następujący sposób:\n",
         "\n"
@@ -39,24 +37,24 @@
       "cell_type": "code",
       "source": [
         "some_list = [1, 2, 'test', True, 5.0]\n",
-        "print(f\"Content of the list: {some_list}\")\n",
-        "print(f\"Data type: {type(some_list)}\")"
+        "print(f\"Zawartość listy: {some_list}\")\n",
+        "print(f\"Typ: {type(some_list)}\")"
       ],
       "metadata": {
         "id": "r2zT3xVgZs8k",
-        "outputId": "b24bb3df-f5af-4e0c-bfbc-cc8a3ba1fc7d",
+        "outputId": "856d0f6a-cec1-49a5-8794-c8c27dda4cb2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Content of the list: [1, 2, 'test', True, 5.0]\n",
-            "Data type: <class 'list'>\n"
+            "Zawartość listy: [1, 2, 'test', True, 5.0]\n",
+            "Typ: <class 'list'>\n"
           ]
         }
       ]
@@ -64,20 +62,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Jednak pomimo tego, że listy nadają się one do przechowywania danych, to mają poważne ograniczenia jeśli chodzi o wydajność przetwarzania tych danych, np. wykonywania na nich operacji matematycznych.  \n",
-        "\n",
-        "W NumPy odpowiednikiem listy jest tablica (ang. *array*), a konkretniej klasa `ndarray` zdefiniowana w module `numpy` (importowanym jako `np`). Istnieje kilka różnic między tablicami w NumPy a listami w Pythonie, które sprawiają, że tablice w NumPy są praktycznie zawsze lepszym wyborem jeśli chodzi o obliczenia w Pythonie:\n",
+        "Jednak pomimo tego, że listy nadają się do przechowywania danych, to mają poważne ograniczenia jeśli chodzi o wydajność przetwarzania tych danych, np. wykonywania na nich operacji matematycznych. W NumPy odpowiednikiem listy jest tablica (ang. *array*), a konkretniej klasa `ndarray` zdefiniowana w module `numpy` (importowanym zwyczajowo jako `np`). Istnieje kilka różnic między tablicami w NumPy a listami w Pythonie, które sprawiają, że tablice w NumPy są praktycznie zawsze lepszym wyborem jeśli chodzi o obliczenia w Pythonie:\n",
         "- Podstawową różnicą jest szybkość działania. Do przeprowadzania obliczeń NumPy wykorzystuje funkcje uniwersalne (ang. *universal functions*, w skrócie *ufuncs*), które udostępniają przystępne API w Pythonie i wydajną implementację w języku C.\n",
-        "- Tablice NumPy zajmują mniej miejsca w pamięci.\n",
+        "- Tablice NumPy zajmują mniej miejsca w pamięci komputera.\n",
         "\n",
-        "Obiektów `ndarray` mają również swoje ograniczenia, które są ich zaletą przyczynając się do wzrostu wydajności: \n",
+        "Obiekty `ndarray` mają również swoje ograniczenia, które są ich zaletą, przyczynając się do wzrostu wydajności: \n",
         "- obiekty przechowywane w jednej tablicy NumPy muszą być tego samego typu\n",
         "- brak możliwości zmiany wielkości obiektu po jego utworzeniu.\n",
         "\n",
-        "Podsumowując zalety NumPy: \n",
-        "- optymalizuje użycie pamięci, \n",
-        "- pozwala na stosowanie obliczeń bez konieczności wieloktronego używanie pętli for (iteracji), \n",
-        "- wiele bibliotek z obszaru AI, w szczególności uczenia maszynowego i data science wymaga numpy."
+        "\n",
+        "NumPy pozwala również na stosowanie obliczeń bez konieczności wieloktronego używanie pętli for (iteracji), co istotnie przyspiesza obliczenia.\n",
+        "\n",
+        "Warto również podkreślić, że wiele bibliotek z obszaru AI, w szczególności uczenia maszynowego i data science wymaga NumPy."
       ],
       "metadata": {
         "id": "22uzbjdKZtqC"
